# EasySpell

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/easyspell/: cli.py  main.py
static/css/: styles.css
templates/: index.html
